crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_excl_mark_doctypea_system_apos1_apos1_u001f.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<!DOCTYPEa SYSTEM''\u001f\"####)"
---
[
    Token {
        data: "DOCTYPEa SYSTEM''\u{1f}",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
